crud completo de usuario, falta equipos e inventarios

--- a/src/app/detalles-users/detalles-users.page.html
+++ b/src/app/detalles-users/detalles-users.page.html
@@ -8,7 +8,7 @@
   </ion-header>
 
 <ion-content>
-
+ 
     <div class="logo-section">
         <div class="logo-section__wrapper">
           <img class="logo-section__logo" src="assets/img/logo.png" />
@@ -21,16 +21,16 @@
         <p>{{ usuarios.email }}</p>
     </div>
 
-    <ion-grid>
+    <ion-grid> 
         <ion-row>
             <ion-col></ion-col>
-            <ion-col class="ion-text-center">
-                <ion-button icon-only color="primary" class="rounded">
+            <ion-col class="ion-text-center"> 
+                <ion-button icon-only color="primary" class="rounded" (click)="traer_usuario(usuarios)">
                     <ion-icon  name="create"></ion-icon>
                 </ion-button>  
             </ion-col>
             <ion-col class="ion-text-center">
-                <ion-button icon-only color="danger" class="rounded">
+                <ion-button icon-only color="danger" class="rounded" (click)="eliminar_usuario(usuarios)">
                     <ion-icon  name="close"></ion-icon>
                 </ion-button>  
             </ion-col>
